<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Beam File</string>
    <string name="menu_settings">Settings</string>
    <string name="beaming_file">Beaming file using Android Beam™</string>
    <string name="beaming_files">Beaming files using Android Beam™</string>
    <string name="beaming_text">Beaming text using Android Beam™</string>
    <string name="touch_devices">Touch the two devices to continue…</string>
    <string name="file_sent">File is being beamed, press back to exit</string>
    <string name="menu_about">About</string>
    <string name="menu_donate">Donate</string>
    <string name="about_dialog_title">About</string>
    <string name="about_text">File Beam\n\nA quick application to send any file using Android Beam™\n\n© 2013\nMohammad Abu-Garbeyyeh</string>
    <string name="nfc_not_available">Sorry, your device doesn\'t seem to have an NFC adapter</string>
    <string name="nfc_turned_off">NFC is currently turned off in Settings, please enable it and try to share the file again</string>
    <string name="detail_unknown_content">Unknown content</string>
    <string name="detail_unknown_size">Unknown size</string>
    <string name="detail_unknown_type">Unknown type</string>
    <string name="content_description_image">Image depicting the type of the file that is being beamed</string>
    <string name="multiple_files">Multiple files</string>
    <string name="multiple_file_types">Multiple file types</string>
    <string name="unable_to_get_filename">Failed to get filename</string>
    <string name="settings_showcase_title">You\'ve switched to the dialog theme</string>
    <string name="settings_showcase_detail">To access the overflow menu in the dialog theme, tap and hold this icon. Try it now!</string>

</resources>