<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="fill_horizontal"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/fileSizeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fileNameTextView"
        android:layout_below="@+id/contentTypeTextView"
        android:gravity="center_horizontal"
        android:text="@string/detail_unknown_size" />

    <TextView
        android:id="@+id/contentTypeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/fileNameTextView"
        android:gravity="center_horizontal"
        android:text="@string/detail_unknown_type" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/beaming_file"
        android:textSize="@dimen/text_size" />

    <TextView
        android:id="@+id/fileNameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/defaultIconView"
        android:layout_marginTop="19dp"
        android:gravity="center_horizontal"
        android:text="@string/detail_unknown_content" />

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:gravity="center_horizontal"
        android:text="@string/touch_devices" />
    
    <com.google.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        ads:adSize="BANNER"
        ads:adUnitId="a15120d4cc26701"
        ads:loadAdOnCreate="true"
        ads:testDevices="TEST_EMULATOR, 4df1cc2033fc9f9f" >
    </com.google.ads.AdView>
    
    <ImageView
        android:id="@+id/defaultIconView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/statusTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/content_description_image"
        android:src="@android:drawable/sym_def_app_icon" />

</RelativeLayout>